# N-body-simulation

./: CMakeLists.txt  README.md
headers/: error.h  generator.h  integrator.h  model.h  parser.h  potentials.h  presenter.h  vec3d.h
src/: generator.cpp  integrator.cpp  main.cpp  model.cpp  parser.cpp  potentials.cpp  presenter.cpp  vec3d.cpp
